docs/it/2.16/media-manager/settings.md
# SETTINGS
![](/img/mediamanager_settings_1.png)

### Lingua
Scelta della lingua tra __Italiano__ e __Inglese__ del Media Manager.

### Apertura
__Singola Istanza:__ Può essere aperto un solo Touchviewer [default].<br>
__Istanze Multiple:__ Possono essere aperte più finestre del Touchviewer.

### Stile finestra
__Senza bordi:__ Il Media Presenter si apre in modalità fullscreen [default].<br>
__Standard:__ Il Media Presenter si apre in modalità windowed.

### Dimensioni
__Tutto schermo:__ Il Media Presenter occuperà tutto lo schermo disponibile.<br>
__Personalizzate:__ Il Media Presenter si aprirà alla dimensione impostata nelle proprietà aggiuntive:<br>
- _Larghezza:_ Larghezza della finestra:<br>
- _Altezza:_ Altezza della finestra:<br>

__Posizione:__ Posizione in cui si deve aprire la finestra:<br>
- __Centro:__ La finestra si aprirà al centro dello schermo.<br>
- __Personalizzata:__ La finestra si potrà aprire nella posizione desiderata, impostando le proprietà aggiuntive:<br>
  - _Sinistra:_ Posizione rispetto il margine sinistro.<br>
  - _Alto:_ Posione rispetto il margine alto.

### Background
__Colore di sfondo:__ Tinta unita che deve avere il background dello stage.<br>
__Video o immagine di sfondo:__ Immagine di Default da usare come background.<br>
__Adattamento file:__ Determina la modalità di adattamento del background rispetto allo stage:<br>
  - _Stira:_ Il file viene adattato alla risoluzione della finestra senza mantenere le proporzioni originarie [default]<br>
  - _Nessuno:_ il file non viene adattato ed è possibile scegliere in quale posizione deve comparire<br>
  - _Adatta Internamente:_ Il file viene adattato mantenendo le sue proprozioni all'interno della finestra<br>
  - _Adatta Esternamente:_ Il file viene adattato mantenendo le sue proprozioni coprendo tutta l'area visibile dello stage

### Qualità
__Qualità:__ Rappresenta l'indice di qualità dell'aspetto grafico generale del software e dei contenuti in esso caricati.<br>
__Mouse:__ Mostra / nascondo il puntatore del mouse.<br>
__Punti di tocco:__ Mostra / nascondo il cursore del touch.<br>
__Colore punti di tocco:__ Indica il colore con cui viene visualizzato il cursore del touch.<br>
__DPI Documenti:__ Determina il fattore di qualità per la conversione automatica dei documenti PDF, DOC, DOCX.<br>
__Video simultanei:__ Determina il numero di video da riprodurre contemporaneamente sullo stage.

### Draw-on
__Colore matita pennello:__ Imposta il colore predefinito per la funzionalità draw-on.<br>
__Stile:__ Imposta lo stile predefinito per la funzionalità draw-on.<br>
__Dimensione tratto:__ Imposta la dimensione tratto predefinita per la funzionalità draw-on.<br>
__Includi disegni in stampa:__ Include i disegni nella stampa dei documenti.

### Impostazioni generali
__Chiave mappa di bing:__ Specificare una chiave registrata per l'utilizzo del provider Bing map.<br>
__Apertura esterna dei file:__ Abilita l'opzione per l'apertura del contenuto con il programma predefinito di windows.<br>
__Full screen:__ Abilita l'opzione per l'apertura del contenuto a schermo intero.<br>
__Editazione:__ Abilita la funzionalità draw-on su tutti i contenuti.<br>
__Stampa:__ Abilita la funzionalità di stampa su tutti i contenuti.<br>
__Preferiti:__ Abilita la funzionalità aggiungi a preferiti su tutti i contenuti.<br>
__Invio email da preferiti:__ Abilita la possibilità di condividere contenuti tramite email:<br>
- _Mittente predefinito:_ Indirizzo email predefinito per l'invio delle emal.<br>
- _Smtp Hosting:_ Specificare il protocollo SMTP per la condivisione di contenuti tramite email.<br>
- _Username:_ Specificare lo Username dell'account per la condivisione di contenuti tramite email.<br>
- _Password:_ Specificare la Password dell'account per la condivisione di contenuti tramite email.<br>
- _Port:_ Specificare la porta del protocollo SMTP per la condivisione di contenuti tramite email.<br>
- _Ssl:_ Specificare se l'account smtp richiede l'SSL attivo.<br>
__Abilita ricerca:__ Viene abilitata la funzione di ricerca all'interno dell'archivio.<br>
__Abilita rotazione magnetica:__ Quando è abilitata i contenuti potranno essere ruotati a step di 90°.<br>
__Apertura multipla punti informativi:__ Quando è abilitata si potranno aprire più punti informativi alla volta.<br>
__Tema moduli:__ Personalizzazione grafica dei moduli "Preferiti", "Ricerca", etc [__Vai al Tema Moduli__](/it/2.16/media-manager/themes/theme-module.md)

### Impostazioni screensaver
![](/img/screensaver.png)

__Tipo:__ Abilita lo screensaver per sequenze di immagini e video.<br>
__Attivazione:__ Valore in secondi che determina l'attivazione dello screensaver in caso di inattività dell'utente.<br>
__Tempo foto:__ Valore in secondi che determina la pausa delle foto in sequenza.<br>
__Video e/o immagini:__ Selezione dei file da importare nello screensaver.<br>
__Adattamento file:__ Determina la modalità di adattamento dei file rispetto allo stage:<br>
  - _Stira:_ Il file viene adattato alla risoluzione della finestra senza mantenere le proporzioni originarie [default]<br>
  - _Nessuno:_ il file non viene adattato ed è possibile scegliere in quale posizione deve comparire<br>
  - _Adatta Internamente:_ Il file viene adattato mantenendo le sue proprozioni all'interno della finestra<br>
  - _Adatta Esternamente:_ Il file viene adattato mantenendo le sue proprozioni coprendo tutta l'area visibile dello stage<br>
E' possibile inoltre alternare foto e video all'interno dello stesso screensaver.
